K8s/commands-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commands
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service
          image: hasandiab/commandservice:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"

# defintion fo the clusterIP service of this deployment
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip
spec:
  type: ClusterIP
  selector:
    app: command-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
