K8s/mssql-platforms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-platforms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-platforms
  template:
    metadata:
      labels:
        app: mssql-platforms
    spec:
      containers:
        - name: mssql-platforms
          image: mcr.microsoft.com/mssql/server:2019-latest
          ports:
            - containerPort: 1433
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: platformsdb
              mountPath: /var/opt/mssql/data
      volumes:
        - name: platformsdb
          persistentVolumeClaim:
            claimName: mssql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip
spec:
  type: ClusterIP
  selector:
    app: mssql-platforms
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-platforms
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
