K8s/platforms-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms
spec:
  replicas: 1
  # the selector is used to actually select the template that will be used to create the pods
  selector:
    matchLabels:
      app: platform-service
      # the template is used to specify the image and other stuff that the pods of this deployment will use
  template:
    metadata:
      labels:
        app: platform-service
    spec:
      containers:
        - name: platform-service
          image: hasandiab/platformservice:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip
spec:
  type: ClusterIP
  selector:
    app: platform-service
  ports:
    - name: platform-http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: platform-grpc
      protocol: TCP
      port: 1234
      targetPort: 1234
