K8s/ingress-routing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-routing
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: platformscommands.com
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platform-clusterip
                port:
                  number: 8080
          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: command-clusterip
                port:
                  number: 8080
